objects/Investor_Account__c.object
<CustomObject>
    <fields>
        <fullName>Storage_GB_Inflation_Notes__c</fullName>
        <label>Storage Inflation Notes (GB)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Storage_GB_Legal_DD_Provider__c</fullName>
        <label>Storage - Legal - DD Provider (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_GB_Other_Battery_Manufacturer__c</fullName>
        <label>Other - Battery Manufacturer (GB)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_GB_Other_Duration_Appetite__c</fullName>
        <label>Other - Storage Duration Appetite (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_GB_Other_Route_to_Market__c</fullName>
        <label>Other - Storage Route to Market (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_GB_Outstanding_Development_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Storage Outstanding Development Risk(GB)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Storage_GB_PP_DD_Provider__c</fullName>
        <label>Storage - P&amp;P - DD Provider (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_GB_RPI_Inflation__c</fullName>
        <label>Storage RPI Inflation (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Storage_GB_Risk_Investor_Not_Taking__c</fullName>
        <inlineHelpText>Specify Outstanding Development Risk that the investor is not comfortable taking?</inlineHelpText>
        <label>Storage Risk Investor Not Taking?(GB)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grid Price</fullName>
                </value>
                <value>
                    <fullName>Grid Route</fullName>
                </value>
                <value>
                    <fullName>Grid Connection Offer</fullName>
                </value>
                <value>
                    <fullName>Grid Planning</fullName>
                </value>
                <value>
                    <fullName>Option Lease Completed</fullName>
                </value>
                <value>
                    <fullName>Title Matters</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Auction / Route to Market</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>JR Risk</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_GB_Route_to_Market__c</fullName>
        <label>Storage Route to Market (GB)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Merchant Trading</fullName>
                </value>
                <value>
                    <fullName>Ancillary Services - FFR</fullName>
                </value>
                <value>
                    <fullName>Ancillary Services - DS3</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_GB_Size_Appetite__c</fullName>
        <label>Storage Size Appetite (GB)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;10 MW</fullName>
                </value>
                <value>
                    <fullName>10-50 MW</fullName>
                </value>
                <value>
                    <fullName>&gt;50 MW</fullName>
                </value>
                <value>
                    <fullName>&gt;100 MW</fullName>
                </value>
                <value>
                    <fullName>&gt;300 MW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_GB_Technical_DD_Provider__c</fullName>
        <label>Storage - Technical - DD Provider (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Grid_Configuration__c</fullName>
        <label>Storage Grid Configuration</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Co-located with H2 Electrolyser</fullName>
                </value>
                <value>
                    <fullName>Co-located with Solar</fullName>
                </value>
                <value>
                    <fullName>Co-located with Wind</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
                <value>
                    <fullName>Standalone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_IE_Additional_Dev_Risk__c</fullName>
        <label>Additional Storage Dev Risk (IE)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Storage_IE_Battery_Augmentation__c</fullName>
        <label>Battery Augmentation (IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_IE_Battery_Manufacturer__c</fullName>
        <label>Battery Manufacturer (IE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BYD</fullName>
                </value>
                <value>
                    <fullName>Narada</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Samsung</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_IE_CPI_Inflation__c</fullName>
        <label>Storage CPI Inflation (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Storage_IE_Cycling_Rate__c</fullName>
        <label>Storage Cycling Rate (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Storage_IE_DD_Providers__c</fullName>
        <label>Storage - DD Providers (IE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Property &amp; Planning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_IE_Duration_Appetite__c</fullName>
        <label>Storage Duration Appetite (IE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0.5hr</fullName>
                </value>
                <value>
                    <fullName>1hr</fullName>
                </value>
                <value>
                    <fullName>1.5hr</fullName>
                </value>
                <value>
                    <fullName>2hr</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_IE_EPC_Provider__c</fullName>
        <label>Storage EPC Provider (IE)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_IE_Financial_DD_Provider__c</fullName>
        <label>Storage - Financial - DD Provider (IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_IE_IRR__c</fullName>
        <label>Storage IRR (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Storage_IE_Inflation_Notes__c</fullName>
        <label>Storage Inflation Notes (IE)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Storage_IE_Legal_DD_Provider__c</fullName>
        <label>Storage - Legal - DD Provider (IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_IE_Other_Battery_Manufacturer__c</fullName>
        <label>Other - Battery Manufacturer (IE)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_IE_Other_Duration_Appetite__c</fullName>
        <label>Other - Storage Duration Appetite (IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_IE_Other_Route_to_Market__c</fullName>
        <label>Other - Storage Route to Market (IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_IE_Outstanding_Development_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Storage Outstanding Development Risk(IE)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Storage_IE_PP_DD_Provider__c</fullName>
        <label>Storage - P&amp;P - DD Provider (IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_IE_RPI_Inflation__c</fullName>
        <label>Storage RPI Inflation (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Storage_IE_Risk_Investor_Not_Taking__c</fullName>
        <inlineHelpText>Specify Outstanding Development Risk that the investor is not comfortable taking?</inlineHelpText>
        <label>Storage Risk Investor Not Taking?(IE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grid Price</fullName>
                </value>
                <value>
                    <fullName>Grid Route</fullName>
                </value>
                <value>
                    <fullName>Grid Connection Offer</fullName>
                </value>
                <value>
                    <fullName>Grid Planning</fullName>
                </value>
                <value>
                    <fullName>Option Lease Completed</fullName>
                </value>
                <value>
                    <fullName>Title Matters</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Auction / Route to Market</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>JR Risk</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_IE_Route_to_Market_Provider__c</fullName>
        <label>Storage Route to Market Provider (IE)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_IE_Route_to_Market__c</fullName>
        <label>Storage Route to Market (IE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Merchant Trading</fullName>
                </value>
                <value>
                    <fullName>Ancillary Services - FFR</fullName>
                </value>
                <value>
                    <fullName>Ancillary Services - DS3</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_IE_Size_Appetite__c</fullName>
        <label>Storage Size Appetite (IE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;10 MW</fullName>
                </value>
                <value>
                    <fullName>10-50 MW</fullName>
                </value>
                <value>
                    <fullName>&gt;50 MW</fullName>
                </value>
                <value>
                    <fullName>&gt;100 MW</fullName>
                </value>
                <value>
                    <fullName>&gt;300 MW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_IE_Technical_DD_Provider__c</fullName>
        <label>Storage - Technical - DD Provider (IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Interest_in_which_Region__c</fullName>
        <label>Storage Interest in which Region?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>Northern Ireland</fullName>
                </value>
                <value>
                    <fullName>Republic of Ireland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_Other_Service_Not_Available__c</fullName>
        <label>Other - Storage Service Not Available</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Route_to_Market_Provider_GB__c</fullName>
        <label>Storage Route to Market Provider (GB)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Service_Not_Available_to_RES__c</fullName>
        <label>Which Service is Not Available to RES?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EPC</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>O&amp;M</fullName>
                </value>
                <value>
                    <fullName>PPA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_50MW_GB_project_AC_DC_ratio_used__c</fullName>
        <label>Sub 50MW project AC-DC ratio used (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_50MW_IE_project_AC_DC_ratio_used__c</fullName>
        <label>Sub 50MW project AC-DC ratio used (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Account__c</fullName>
        <label>Type of Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>EPC Provider</fullName>
                </value>
                <value>
                    <fullName>Fund</fullName>
                </value>
                <value>
                    <fullName>IPP</fullName>
                </value>
                <value>
                    <fullName>Oil &amp; Gas Major</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Utility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Relationship__c</fullName>
        <label>Type of Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Global Key</fullName>
                </value>
                <value>
                    <fullName>Regional Key</fullName>
                </value>
                <value>
                    <fullName>BL Key</fullName>
                </value>
                <value>
                    <fullName>Target</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Existing Client</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Investor Account</label>
    <nameField>
        <label>Investor Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investor Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>